--- a/examples/benchmark/plotPentamerFPTs.ipynb
+++ b/examples/benchmark/plotPentamerFPTs.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "# Main parameters\n",
-    "numparticles = 3\n",
+    "numparticles = 5\n",
     "boxsize = 6 #2.5 #10 #8 #6 #5 \n",
     "D = 1.0\n",
     "Drot = 1.0\n",
@@ -61,8 +61,8 @@
    "outputs": [],
    "source": [
     "# Load benchmark FPT data computed by script\n",
-    "numTrajs = 200000\n",
-    "filename1 = rootDirectory + 'pentamerFPTs_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '_concatenated.xyz'\n",
+    "numTrajs = 400000\n",
+    "filename1 = rootDirectory + 'pentamerFPTs_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '_final.xyz'\n",
     "fpts = []\n",
     "\n",
     "with open(filename1) as file:\n",
@@ -71,8 +71,8 @@
     "        if state == referenceState:\n",
     "            time = float(time)\n",
     "            fpts.append(time)\n",
-    "            if len(fpts) >= 2500:\n",
-    "                break\n",
+    "            #if len(fpts) >= 2500:\n",
+    "            #    break\n",
     "\n",
     "# Normalize weights\n",
     "weights = np.ones_like(fpts)/float(len(fpts))\n",
@@ -97,7 +97,7 @@
     "        if state == referenceState:\n",
     "            time = float(time)\n",
     "            MSMRDfpts.append(time)\n",
-    "            #if len(MSMRDfpts) >= 2500:\n",
+    "            #if len(MSMRDfpts) >= 3645:\n",
     "            #    break\n",
     "            \n",
     "# Normalize weights\n",
@@ -215,24 +215,26 @@
     "# Load FPT data obtained with MSMRD integrator\n",
     "numTrajs = 20000 #20000 #25000 \n",
     "boxsizes = [6,7,8,9,10,11]\n",
+    "boxsizes = [6,9]\n",
     "numBoxes = len(boxsizes)\n",
     "fpt = [[] for i in range(numBoxes)]\n",
     "MSMRDfpt = [[] for i in range(numBoxes)]\n",
     "for i, boxlen in enumerate(boxsizes):\n",
-    "    #filename1 = rootDirectory + '/patchyDimerFPTs_2bound_trajs' + \\\n",
-    "    #    str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
+    "    filename1 = rootDirectory + '/pentamerFPTs_trajs' + \\\n",
+    "        str(numTrajs) + '_boxsize' + str(boxlen) + '.xyz'\n",
     "    filename2 = rootDirectory + 'MSMRDpentamerFPTs_trajs' + str(numTrajs) \\\n",
     "                         + '_lagt' + str(lagtime) +  '_boxsize' + str(boxlen) + '.xyz'\n",
-    "    #with open(filename1) as file:\n",
-    "    #    for line in file:\n",
-    "    #        state, time = line.split(\" \")\n",
-    "    #        fpt[i].append(float(time))\n",
+    "    with open(filename1) as file:\n",
+    "        for line in file:\n",
+    "            state, time = line.split(\" \")\n",
+    "            fpt[i].append(float(time))\n",
     "    with open(filename2) as file:\n",
     "        for line in file:\n",
     "            state, time = line.split(\" \")\n",
-    "            MSMRDfpt[i].append(float(time))\n",
-    "            if len(MSMRDfpt[i]) >= 1000:\n",
-    "                break"
+    "            if state == 'pentameric-loop':\n",
+    "                MSMRDfpt[i].append(float(time))\n",
+    "                if len(MSMRDfpt[i]) >= 1000:\n",
+    "                    break"
    ]
   },
   {
@@ -252,13 +254,13 @@
     "errorKonMSMRD = np.zeros(numBoxes)\n",
     "for i, boxlen in enumerate(boxsizes):\n",
     "    # Calculate bootstrapping samples of mean first passage times\n",
-    "    #mfpt, fptStdDev = analysisTools.bootstrapping(fpt[i], numBootsrapSamples, numValues)\n",
+    "    mfpt, fptStdDev = analysisTools.bootstrapping(fpt[i], numBootsrapSamples, numValues)\n",
     "    MSMRDmfpt, MSMRDfptStdDev = analysisTools.bootstrapping(MSMRDfpt[i], numBootsrapSamples, numValues)\n",
     "    # Calculate on rate corresponding to bootstrapping samples\n",
-    "    #meanKon[i], stdDevKon[i] = 1.0/mfpt, fptStdDev/(mfpt*mfpt)\n",
+    "    meanKon[i], stdDevKon[i] = 1.0/mfpt, fptStdDev/(mfpt*mfpt)\n",
     "    meanKonMSMRD[i], stdDevKonMSMRD[i] = 1.0/MSMRDmfpt, MSMRDfptStdDev/(MSMRDmfpt*MSMRDmfpt)\n",
     "    # Percentual errors\n",
-    "    #errorKon[i] = stdDevKon[i] #1.96*stdDevKon[i]/numBootsrapSamples\n",
+    "    errorKon[i] = stdDevKon[i] #1.96*stdDevKon[i]/numBootsrapSamples\n",
     "    errorKonMSMRD[i] = stdDevKonMSMRD[i] #1.96*stdDevKonMSMRD[i]/numBootsrapSamples"
    ]
   },
@@ -275,7 +277,7 @@
     "plt.rcParams['ytick.labelsize']=fsize\n",
     "ax = fig.add_subplot(111)\n",
     "linewidth = 2\n",
-    "concentrations = 1.0/pow(5*np.array(boxsizes),3)\n",
+    "concentrations = 5/pow(5*np.array(boxsizes),3)\n",
     "# Assuming moleculas have a diameter of 5nm, the actual boxsize is 5*boxisze nm,\n",
     "# lets convert to Molar concentration\n",
     "avogadro = 6.022E23\n",
@@ -283,10 +285,10 @@
     "concentrationsMolar = concentrations*oneLiter2nm/avogadro\n",
     "\n",
     "# Plots with shaded regions as error bars\n",
-    "#ax.plot(concentrationsMolar, meanKon, marker='o', markersize=6, linewidth=linewidth , color='#ff5b00', \n",
-    "#        label=r'$\\mathrm{Benchmark}$')\n",
-    "#ax.fill_between(concentrationsMolar, meanKon-errorKon, meanKon+errorKon, alpha=0.3, edgecolor='#ff5b00', \n",
-    "#                facecolor='#ff5b00')\n",
+    "ax.plot(concentrationsMolar, meanKon, marker='o', markersize=6, linewidth=linewidth , color='#ff5b00', \n",
+    "        label=r'$\\mathrm{Benchmark}$')\n",
+    "ax.fill_between(concentrationsMolar, meanKon-errorKon, meanKon+errorKon, alpha=0.3, edgecolor='#ff5b00', \n",
+    "                facecolor='#ff5b00')\n",
     "\n",
     "# Traditional error bar plots\n",
     "ax.errorbar(concentrationsMolar, meanKonMSMRD, yerr=errorKonMSMRD, marker='o', markersize=6, linestyle='--',\n",
@@ -297,7 +299,10 @@
     "ax.set_xlabel(r'$\\mathrm{Concentration}$ ($M$)', fontsize = fsize+4)\n",
     "ax.set_ylabel(r'$\\mathrm{log}(k_\\mathrm{on}$)', fontsize = fsize+6)\n",
     "#ax.set_yticks([0.001,.01])\n",
-    "#ax.set_ylim([0,0.12])"
+    "#ax.set_ylim([0,0.12])\n",
+    "ax.ticklabel_format(axis=\"x\", style=\"sci\",scilimits=(0,0))\n",
+    "ax.legend(fontsize=fsize, title_fontsize = fsize, fancybox=True)\n",
+    "#plt.savefig('kon_pentamer.pdf', bbox_inches='tight')"
    ]
   },
   {
