Updated notebooks producing figures

--- a/examples/generateMSM.ipynb
+++ b/examples/generateMSM.ipynb
@@ -27,6 +27,7 @@
     "#parentDirectory = '../data/pentamer/patchyDimer/'\n",
     "#parentDirectory = '../data/testPatchyProtein/benchmark_t6E6_s25_new_equaldiff/'\n",
     "parentDirectory = '../data/trimer/benchmark/'\n",
+    "#parentDirectory = '/run/media/maojrs/Mr300/Documents/teradata/msmrd2_paper/trimer/benchmark/'\n",
     "\n",
     "parameterDictionary = analysisTools.readParameters(parentDirectory + \"parameters\")\n",
     "# Parameters for loading files (from original simulation)\n",
@@ -54,7 +55,7 @@
     "#numBoundStates = 8\n",
     "#numBoundStates = 6\n",
     "numBoundStates = 4\n",
-    "lagtime = 75 #75 150\n",
+    "lagtime = 40 #75 150\n",
     "reversible = True #False\n",
     "stitching = True"
    ]
@@ -168,10 +169,10 @@
    "outputs": [],
    "source": [
     "# Calculate implied time scales\n",
-    "maxlagtime = 300 #100 #200 #300\n",
-    "its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible)\n",
+    "maxlagtime = 80 #300 #100 #200 #300\n",
+    "#its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible)\n",
     "# with error bars\n",
-    "#its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible, errors='bayes')"
+    "its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible, errors='bayes')"
    ]
   },
   {
@@ -219,7 +220,9 @@
     "#plt.ylim([10.0,100000])\n",
     "#plt.savefig('its_dimer_strength60_final_alt.pdf')\n",
     "#plt.savefig('its_pentamer_strength80_test.pdf')\n",
-    "#plt.savefig('its_patchyProteinTest.pdf')"
+    "#plt.savefig('its_patchyProteinTest.pdf')\n",
+    "plt.savefig('its_dimer4Pentamer_strength160.svg')\n",
+    "plt.savefig('its_dimer4Pentamer_strength160.pdf')"
    ]
   },
   {
@@ -237,9 +240,11 @@
     "plt.xlabel(r\"lag time/steps\", fontsize = 24)\n",
     "plt.xticks(fontsize = 28)\n",
     "plt.yticks(fontsize = 28)\n",
-    "#plt.ylim([10.0,4500])\n",
+    "plt.ylim([10.0,10000000])\n",
     "#plt.savefig('its_nolog_dimer_strength60_final_alt.pdf')\n",
-    "#plt.savefig('its_nolog_pentamer_strength80_test.pdf')"
+    "#plt.savefig('its_nolog_pentamer_strength80_test.pdf')\n",
+    "#plt.savefig('its_nolog_dimer4Pentamer_strength160.svg')\n",
+    "#plt.savefig('its_nolog_dimer4Pentamer_strength160.pdf')"
    ]
   },
   {
