--- a/examples/benchmark/plotPatchyProteinFPTs.ipynb
+++ b/examples/benchmark/plotPatchyProteinFPTs.ipynb
@@ -413,9 +413,9 @@
    "outputs": [],
    "source": [
     "# Grid plot for histograms\n",
-    "fig, ax = plt.subplots(nrows=6, ncols=5, sharex=True, sharey=True, figsize=(14,10))\n",
+    "fig, ax = plt.subplots(nrows=6, ncols=5, sharex=True, sharey=True, figsize=(14,8))\n",
     "fig.subplots_adjust(hspace=0, wspace=0)\n",
-    "fsize = 22\n",
+    "fsize = 24\n",
     "fsize2 = 15\n",
     "plt.rcParams['xtick.labelsize']=fsize\n",
     "plt.rcParams['ytick.labelsize']=fsize\n",
@@ -424,8 +424,8 @@
     "# Set outer common axes titles\n",
     "ax0 = fig.add_subplot(111, frameon=False)\n",
     "ax0.set_xlabel(r'$\\mathrm{time}$', fontsize=fsize + 4)\n",
-    "ax0.set_ylabel(r'$\\mathrm{FPTs \\ distribution}$', labelpad=17, fontsize=fsize + 4)\n",
-    "ax0.set_title(r'$\\mathrm{Transitions \\ between \\ bound \\ states}$', pad = 10, fontsize=fsize + 10)\n",
+    "#ax0.set_ylabel(r'$\\mathrm{FPTs \\ distribution}$', labelpad=17, fontsize=fsize + 4)\n",
+    "ax0.set_title(r'$\\mathrm{FPTs \\ of \\ transitions \\ between \\ bound \\ states}$', pad = 10, fontsize=fsize + 10)\n",
     "ax0.set_xticks([0])\n",
     "ax0.set_yticks([0])\n",
     "# Loop over plotting grid\n",
@@ -441,15 +441,15 @@
     "        ax[i,j].hist(MSMRDfptsB2B[i,jj], bins = hbins, alpha=a1, color=c2, weights = MSMRDweightsB2B[i,jj]);\n",
     "        ax[i,j].hist(MSMRDfptsB2B[i,jj], bins = hbins, alpha=a2, edgecolor=c2, lw=1, histtype='step',\n",
     "         facecolor='None', weights = MSMRDweightsB2B[i,jj], label =r'$\\mathrm{MSM/RD}$');\n",
-    "        ax[i,j].text(350,0.12, r'{:d} to {:d}'.format(i+1, jj+1), fontsize=fsize, family=\"serif\")\n",
-    "        ax[i,j].text(140,0.095, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfptsB2B[i,jj] , fptB2Bstd[i,jj]), \n",
-    "                     fontsize=fsize2, color=c1)\n",
-    "        ax[i,j].text(160,0.07, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfptsB2B[i,jj], MSMRDfptB2Bstd[i,jj]), \n",
-    "                     fontsize=fsize2, color=c2alt)\n",
+    "        ax[i,j].text(300,0.08, r'{:d} $\\rightarrow$ {:d}'.format(i+1, jj+1), fontsize=fsize, family=\"serif\")\n",
+    "        #ax[i,j].text(140,0.095, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfptsB2B[i,jj] , fptB2Bstd[i,jj]), \n",
+    "        #             fontsize=fsize2, color=c1)\n",
+    "        #ax[i,j].text(160,0.07, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfptsB2B[i,jj], MSMRDfptB2Bstd[i,jj]), \n",
+    "        #             fontsize=fsize2, color=c2alt)\n",
     "        # Add legend\n",
     "        if i == 0 and j == 4:\n",
     "            ax[i,j].legend(fontsize=fsize, fancybox=True, framealpha=1.0, \n",
-    "                           bbox_to_anchor=(1.0, 1.0)) #1.4,1.8\n",
+    "                           bbox_to_anchor=(1.0, 1.6)) #1.4,1.8\n",
     "        # Set plotlimits\n",
     "        ax[i,j].set_xlim([0,600])\n",
     "        #ax[i,j].set_ylim([0,0.23])\n",
@@ -457,7 +457,7 @@
     "        #ax[i,j].set_xticks(np.arange(0, 500, step=300));\n",
     "        #ax[i,j].set_yticks(np.arange(-0.1, 0.3, step=0.2));\n",
     "        \n",
-    "#plt.savefig('bound2bound__patchyProtein_FPTs.pdf', bbox_inches='tight')"
+    "plt.savefig('bound2bound__patchyProtein_FPTs.pdf', bbox_inches='tight')"
    ]
   },
   {
@@ -656,6 +656,52 @@
    "source": [
     "np.mean(ratesB2BRelDiff)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot square grid with errors\n",
+    "fig, ax = plt.subplots(figsize=(6,6))\n",
+    "myColorMap = truncate_colormap(cmap='Blues', minval = 0.0, maxval = 0.65)\n",
+    "im = ax.imshow(100*ratesB2BRelDiff, cmap=myColorMap)\n",
+    "im.set_clim(0.0,15)\n",
+    "# Set labels\n",
+    "ax.set_title(r\"$\\% \\mathrm{ \\ errors}$\", fontsize = fsize + 4)\n",
+    "ax.set_ylabel(r\"$\\mathrm{Initial \\ bound \\ state}$\", fontsize = fsize + 4)\n",
+    "ax.set_xlabel(r'$\\mathrm{Final \\ bound \\ state}$', fontsize = fsize + 4)\n",
+    "# We want to show all ticks...\n",
+    "ax.set_xticks(np.arange(len(boundStates)))\n",
+    "ax.set_yticks(np.arange(len(boundStates)))\n",
+    "# ... and label them with the respective list entries\n",
+    "ax.set_xticklabels(boundStates)\n",
+    "ax.set_yticklabels(boundStates)\n",
+    "# Loop over data dimensions and create text annotations.\n",
+    "#for i in range(len(boundStates)):\n",
+    "#    for j in range(len(boundStates)):\n",
+    "#        if i != j:\n",
+    "            #text = ax.text(j, i, '{:.0f}'.format(np.floor(100*MFPTdiffRel[i, j])), ha=\"center\", \n",
+    "            #               va=\"center\", color=\"k\", fontsize =fsize)\n",
+    "            #text = ax.text(j, i, r'$\\pm${:}'.format(round(ratesDiffRelStd[i, j],2)), ha=\"center\", \n",
+    "            #               va=\"center\", color=\"k\", fontsize =fsize-2)\n",
+    "# Set colorbar\n",
+    "cbar = fig.colorbar(im, ax=ax, shrink = 0.8, norm = mpl.colors.Normalize(vmin=0.,vmax=15))\n",
+    "cbar.set_ticks([0,5,10, 15])\n",
+    "cbar.set_ticklabels([0,5,10, 15])\n",
+    "# Show plot\n",
+    "fig.tight_layout()\n",
+    "#plt.show()\n",
+    "#plt.savefig('patchyProtein_rates_percentError.pdf', bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
