--- a/examples/benchmark/plotPentamerFPTs.ipynb
+++ b/examples/benchmark/plotPentamerFPTs.ipynb
@@ -44,7 +44,7 @@
     "a1 = 0.2 #0.2\n",
     "a2 = 0.7 #0.9 #0.7\n",
     "# referenceState = 'trimeric-loop' or 'tetrameric-loop' or 'pentameric-loop' (sometimes 'pentamer' for the last one)\n",
-    "referenceState = 'pentameric-loop' "
+    "referenceState = 'trimeric-loop' "
    ]
   },
   {
@@ -61,7 +61,7 @@
    "outputs": [],
    "source": [
     "# Load benchmark FPT data computed by script\n",
-    "numTrajs = 400000\n",
+    "numTrajs = 600000\n",
     "filename1 = rootDirectory + 'pentamerFPTs_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '_final.xyz'\n",
     "fpts = []\n",
     "\n",
@@ -71,8 +71,8 @@
     "        if state == referenceState:\n",
     "            time = float(time)\n",
     "            fpts.append(time)\n",
-    "            #if len(fpts) >= 2500:\n",
-    "            #    break\n",
+    "            if len(fpts) >= 5000:\n",
+    "                break\n",
     "\n",
     "# Normalize weights\n",
     "weights = np.ones_like(fpts)/float(len(fpts))\n",
@@ -97,10 +97,11 @@
     "        if state == referenceState:\n",
     "            time = float(time)\n",
     "            MSMRDfpts.append(time)\n",
-    "            #if len(MSMRDfpts) >= 3645:\n",
-    "            #    break\n",
+    "            if len(MSMRDfpts) >= 5000:\n",
+    "                break\n",
     "            \n",
     "# Normalize weights\n",
+    "#MSMRDfpts = MSMRDfpts[4000:9000]\n",
     "weightsMSMRD = np.ones_like(MSMRDfpts)/float(len(MSMRDfpts))\n",
     "print('The number of MSMRD trajectories ending in ' + referenceState + 's is: ', len(MSMRDfpts))"
    ]
@@ -170,9 +171,9 @@
     "\n",
     "\n",
     "# Plot A to unbound histogram\n",
-    "#legendTitle = r'Trimeric ring'\n",
+    "legendTitle = r'Trimeric ring'\n",
     "#legendTitle = r'Tetrameric ring'\n",
-    "legendTitle = r'Pentameric ring'\n",
+    "#legendTitle = r'Pentameric ring'\n",
     "\n",
     "ax1.hist(fpts, bins = hbins, alpha=a1, color=c1, weights = weights );\n",
     "ax1.hist(fpts, bins = hbins, alpha=a2, edgecolor=c1, lw=2, histtype='step', \n",
@@ -191,10 +192,10 @@
     "#ax1.set_xlim([0,400])\n",
     "ax1.set_xlim([0,200])\n",
     "\n",
-    "#plt.savefig('trimerFPTs.pdf', bbox_inches='tight')\n",
-    "#plt.savefig('trimerFPTs.svg', bbox_inches='tight')\n",
+    "plt.savefig('trimerFPTs.pdf', bbox_inches='tight')\n",
+    "plt.savefig('trimerFPTs.svg', bbox_inches='tight')\n",
     "#plt.savefig('tetramerFPTs.pdf', bbox_inches='tight')\n",
-    "##plt.savefig('tetramerFPTs.svg', bbox_inches='tight')\n",
+    "#plt.savefig('tetramerFPTs.svg', bbox_inches='tight')\n",
     "#plt.savefig('pentamerFPTs.pdf', bbox_inches='tight')\n",
     "#plt.savefig('pentamerFPTs.svg', bbox_inches='tight')"
    ]
@@ -214,27 +215,30 @@
    "source": [
     "# Load FPT data obtained with MSMRD integrator\n",
     "numTrajs = 20000 #20000 #25000 \n",
+    "numValues = 1000\n",
     "boxsizes = [6,7,8,9,10,11]\n",
-    "boxsizes = [6,9]\n",
+    "#boxsizes = [6,7,8,9,10]\n",
     "numBoxes = len(boxsizes)\n",
     "fpt = [[] for i in range(numBoxes)]\n",
     "MSMRDfpt = [[] for i in range(numBoxes)]\n",
     "for i, boxlen in enumerate(boxsizes):\n",
-    "    filename1 = rootDirectory + '/pentamerFPTs_trajs' + \\\n",
-    "        str(numTrajs) + '_boxsize' + str(boxlen) + '.xyz'\n",
+    "    filename1 = rootDirectory + 'pentamerFPTs_boxsize' + str(boxlen) + '.xyz'\n",
     "    filename2 = rootDirectory + 'MSMRDpentamerFPTs_trajs' + str(numTrajs) \\\n",
     "                         + '_lagt' + str(lagtime) +  '_boxsize' + str(boxlen) + '.xyz'\n",
     "    with open(filename1) as file:\n",
     "        for line in file:\n",
     "            state, time = line.split(\" \")\n",
     "            fpt[i].append(float(time))\n",
+    "            if len(fpt[i]) >= numValues:\n",
+    "                break\n",
     "    with open(filename2) as file:\n",
     "        for line in file:\n",
     "            state, time = line.split(\" \")\n",
     "            if state == 'pentameric-loop':\n",
     "                MSMRDfpt[i].append(float(time))\n",
-    "                if len(MSMRDfpt[i]) >= 1000:\n",
-    "                    break"
+    "                if len(MSMRDfpt[i]) >= numValues:\n",
+    "                    break\n",
+    "    print(boxlen, len(fpt[i]), len(MSMRDfpt[i]))"
    ]
   },
   {
@@ -243,25 +247,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate meand and bootstrapping error\n",
-    "numBootsrapSamples = 500\n",
-    "numValues = 250\n",
+    "### Calculate meand and bootstrapping error\n",
+    "numBootsrapSamples = 100\n",
     "meanKon = np.zeros(numBoxes)\n",
     "meanKonMSMRD = np.zeros(numBoxes)\n",
     "stdDevKon = np.zeros(numBoxes)\n",
     "stdDevKonMSMRD = np.zeros(numBoxes)\n",
     "errorKon = np.zeros(numBoxes)\n",
     "errorKonMSMRD = np.zeros(numBoxes)\n",
+    "diffKon = np.zeros(numBoxes)\n",
+    "relErrorKon = np.zeros(numBoxes)\n",
     "for i, boxlen in enumerate(boxsizes):\n",
     "    # Calculate bootstrapping samples of mean first passage times\n",
-    "    mfpt, fptStdDev = analysisTools.bootstrapping(fpt[i], numBootsrapSamples, numValues)\n",
-    "    MSMRDmfpt, MSMRDfptStdDev = analysisTools.bootstrapping(MSMRDfpt[i], numBootsrapSamples, numValues)\n",
+    "    mfpt, fptStdDev = analysisTools.bootstrapping(fpt[i], numBootsrapSamples)\n",
+    "    MSMRDmfpt, MSMRDfptStdDev = analysisTools.bootstrapping(MSMRDfpt[i], numBootsrapSamples)\n",
     "    # Calculate on rate corresponding to bootstrapping samples\n",
     "    meanKon[i], stdDevKon[i] = 1.0/mfpt, fptStdDev/(mfpt*mfpt)\n",
     "    meanKonMSMRD[i], stdDevKonMSMRD[i] = 1.0/MSMRDmfpt, MSMRDfptStdDev/(MSMRDmfpt*MSMRDmfpt)\n",
     "    # Percentual errors\n",
     "    errorKon[i] = stdDevKon[i] #1.96*stdDevKon[i]/numBootsrapSamples\n",
-    "    errorKonMSMRD[i] = stdDevKonMSMRD[i] #1.96*stdDevKonMSMRD[i]/numBootsrapSamples"
+    "    errorKonMSMRD[i] = stdDevKonMSMRD[i] #1.96*stdDevKonMSMRD[i]/numBootsrapSamples\n",
+    "    \n",
+    "    diffKon[i] = np.abs(meanKon[i] - meanKonMSMRD[i])\n",
+    "    relErrorKon[i] = diffKon[i]/meanKon[i]\n",
+    "    print(\"On rates for boxsize:\",boxlen)\n",
+    "    print(\"  Bootstrapping mean and std:\", meanKon[i], stdDevKon[i])\n",
+    "    print(\"  Bootstrapping MSMRD mean and std:\", meanKonMSMRD[i], stdDevKonMSMRD[i])\n",
+    "    print(\"  Error and relative error:\", diffKon[i], relErrorKon[i])"
    ]
   },
   {
@@ -302,7 +314,7 @@
     "#ax.set_ylim([0,0.12])\n",
     "ax.ticklabel_format(axis=\"x\", style=\"sci\",scilimits=(0,0))\n",
     "ax.legend(fontsize=fsize, title_fontsize = fsize, fancybox=True)\n",
-    "#plt.savefig('kon_pentamer.pdf', bbox_inches='tight')"
+    "plt.savefig('kon_pentamer.pdf', bbox_inches='tight')"
    ]
   },
   {
