Minor notebook update

--- a/examples/benchmark/plotPentamerFPTs.ipynb
+++ b/examples/benchmark/plotPentamerFPTs.ipynb
@@ -314,7 +314,7 @@
     "#ax.set_ylim([0,0.12])\n",
     "ax.ticklabel_format(axis=\"x\", style=\"sci\",scilimits=(0,0))\n",
     "ax.legend(fontsize=fsize, title_fontsize = fsize, fancybox=True)\n",
-    "plt.savefig('kon_pentamer.pdf', bbox_inches='tight')"
+    "#plt.savefig('kon_pentamer.pdf', bbox_inches='tight')"
    ]
   },
   {
