--- a/examples/benchmark/plotPatchyProteinFPTs.ipynb
+++ b/examples/benchmark/plotPatchyProteinFPTs.ipynb
@@ -457,7 +457,63 @@
     "        #ax[i,j].set_xticks(np.arange(0, 500, step=300));\n",
     "        #ax[i,j].set_yticks(np.arange(-0.1, 0.3, step=0.2));\n",
     "        \n",
-    "plt.savefig('bound2bound__patchyProtein_FPTs.pdf', bbox_inches='tight')"
+    "#plt.savefig('bound2bound__patchyProtein_FPTs.pdf', bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Grid plot for histograms version 2\n",
+    "fig, ax = plt.subplots(nrows=6, ncols=6, sharex=True, sharey=True, figsize=(14,10))\n",
+    "fig.subplots_adjust(hspace=0, wspace=0)\n",
+    "fsize = 22\n",
+    "plt.rcParams['xtick.labelsize']=fsize\n",
+    "plt.rcParams['ytick.labelsize']=fsize\n",
+    "hbins = np.arange(0, 600, 18)\n",
+    "# Set outer common axes titles\n",
+    "ax0 = fig.add_subplot(111, frameon=False)\n",
+    "ax0.set_xlabel(r'$\\mathrm{time}$', fontsize=fsize + 4)\n",
+    "#ax0.set_ylabel(r'$\\mathrm{FPTs \\ distribution}$', labelpad=17, fontsize=fsize + 4)\n",
+    "#ax0.set_title(r'$\\mathrm{FPTs \\ of \\ transitions \\ between \\ bound \\ states}$', pad = 10, fontsize=fsize + 10)\n",
+    "ax0.set_xticks([0])\n",
+    "ax0.set_yticks([0])\n",
+    "# Loop over plotting grid\n",
+    "for i in range(6):\n",
+    "    for j in range(6):\n",
+    "        if i != j:\n",
+    "            ax[i,j].hist(fptsB2B[i,j], bins = hbins, alpha=a1, color=c1, weights = weightsB2B[i,j]);\n",
+    "            ax[i,j].hist(fptsB2B[i,j], bins = hbins, alpha=a2, edgecolor=c1, lw=1, histtype='step',\n",
+    "             facecolor='None', weights = weightsB2B[i,j], label = r'$\\mathrm{Benchmark}$');\n",
+    "            ax[i,j].hist(MSMRDfptsB2B[i,j], bins = hbins, alpha=a1, color=c2, weights = MSMRDweightsB2B[i,j]);\n",
+    "            ax[i,j].hist(MSMRDfptsB2B[i,j], bins = hbins, alpha=a2, edgecolor=c2, lw=1, histtype='step',\n",
+    "             facecolor='None', weights = MSMRDweightsB2B[i,j], label =r'$\\mathrm{MSM/RD}$');\n",
+    "            #ax[i,j].text(300,0.08, r'{:d} $\\rightarrow$ {:d}'.format(i+1, j+1), fontsize=fsize, family=\"serif\")\n",
+    "            #ax[i,j].text(140,0.095, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfptsB2B[i,jj] , fptB2Bstd[i,jj]), \n",
+    "            #             fontsize=fsize2, color=c1)\n",
+    "            #ax[i,j].text(160,0.07, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfptsB2B[i,jj], MSMRDfptB2Bstd[i,jj]), \n",
+    "            #             fontsize=fsize2, color=c2alt)\n",
+    "            # Set plotlimits\n",
+    "            ax[i,j].set_xlim([0,600])\n",
+    "            #ax[i,j].set_ylim([0,0.23])\n",
+    "            ax[i,j].set_ylim([0,0.15])\n",
+    "            ax[i,j].set_xticks(np.arange(0, 500, step=400));\n",
+    "        if j == 5:\n",
+    "            #ax[i,j].tick_params(direction='out', length=6, width=2, colors='r',\n",
+    "            #   grid_color='r', grid_alpha=0.5)\n",
+    "            ax[i,j].tick_params(labelright = True, right=True, left=True)\n",
+    "            #ax[i,j].yaxis.set_label_position(\"right\")\n",
+    "            ax[i,j].yaxis.tick_right()\n",
+    "            ax[i,j].set_yticks([0.1]);\n",
+    "        else:\n",
+    "            ax[i,j].tick_params(labelleft = False, left=True)\n",
+    "            ax[i,j].set_yticks([0.1]);            \n",
+    "\n",
+    "#leg = fig.legend(labels= [r'$\\mathrm{Benchmark}$', r'$\\mathrm{MSM/RD}$'], fontsize=fsize-2, fancybox=True, framealpha=1.0, \n",
+    "#                    loc=\"lower right\", bbox_to_anchor=(0.85, 0.087))\n",
+    "#plt.savefig('bound2bound__patchyProtein_FPTs_v2.pdf', bbox_inches='tight')"
    ]
   },
   {
@@ -663,7 +719,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot square grid with errors\n",
+    "# Plot square grid with errors version 2\n",
     "fig, ax = plt.subplots(figsize=(6,6))\n",
     "myColorMap = truncate_colormap(cmap='Blues', minval = 0.0, maxval = 0.65)\n",
     "im = ax.imshow(100*ratesB2BRelDiff, cmap=myColorMap)\n",
