--- a/examples/models/patchyParticles.ipynb
+++ b/examples/models/patchyParticles.ipynb
@@ -339,11 +339,18 @@
     "yy = U(x, sigma, xstar2, xcritical2, eps2, a2, b2)\n",
     "plt.plot(x,yy, '-b')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -357,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
