Cleaned up notebooks models

--- a/examples/models/patchyParticles.ipynb
+++ b/examples/models/patchyParticles.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Patchy particles potential \n",
+    "\n",
+    "Implempentation of five freely diffusing patchy particles (rigid bodies) with two patches each and pair interactions given by the patchy particle potential defined in the main code. In principle, with the current seeds, it will generate a pentameric ring formation. If it does not, you might have different versions of c++ or python."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -21,8 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define arbitrarily large list of rod-like particles\n",
-    "np.random.seed(seed=1) # seed 1 good for pentamer \n",
+    "# Define arbitrarily large list of patchy particles\n",
+    "np.random.seed(seed=1) # seed 1 good used for pentameric ring formation \n",
     "numparticles = 5\n",
     "boxsize = 3\n",
     "D = 1.0\n",
@@ -31,19 +40,6 @@
     "positionList = [np.array([-1.0,0,0]), np.array([0.,0.,0.]), np.array([1.0,0.,0.]), \n",
     "                np.array([2.0,0.,0.]), np.array([3.0,0.,0.])]\n",
     "orientationList = [ np.array([1.,0.,0.,0.]), np.array([np.cos(np.pi/2),0.,0.,np.sin(np.pi/2)])]\n",
-    "\n",
-    "\"\"\"\n",
-    "# Position List for pentamer IC\n",
-    "th0 = 3*np.pi/5.0\n",
-    "th = np.pi - th0\n",
-    "thextra = np.pi/2 + th/2.0\n",
-    "positionList = []\n",
-    "orientationList = []\n",
-    "for i in range(5):\n",
-    "    positionList.append(0.85*np.array([np.cos(th*i),np.sin(th*i),0.0]))\n",
-    "    orientation = np.array([np.cos(0.5*(th*i + thextra)),0,0,np.sin(0.5*(th*i + thextra))])\n",
-    "    orientationList.append(orientation)\n",
-    "\"\"\"\n",
     "\n",
     "for i in range(numparticles):\n",
     "    \n",
@@ -60,11 +56,7 @@
     "                \n",
     "    orientation = np.array([np.random.rand(),np.random.rand(),np.random.rand(),np.random.rand()])\n",
     "    orientation = orientation/np.linalg.norm(orientation)\n",
-    "    #orientation = np.array([1.,0.,0.,0.])\n",
-    "    #orientation = np.array([np.cos(np.pi/4.0), np.sin(np.pi/4), 0.0, 0.0]) #Rotate 90 degrees in x axis\n",
     "    part = msmrd2.particle(D, Drot, position, orientation)\n",
-    "    #part = msmrd2.particle(D, Drot, positionList[i], orientation)\n",
-    "    #part = msmrd2.particle(D, Drot, positionList[i], orientationList[i])\n",
     "    pyPartlist.append(part)"
    ]
   },
@@ -75,7 +67,7 @@
    "outputs": [],
    "source": [
     "# Create list of particles that can be read from msmrd\n",
-    "# Note the particles in this list will be independent from the python list.\n",
+    "# note the particles in this list will be independent from the python list.\n",
     "partlist = msmrd2.integrators.particleList(pyPartlist)"
    ]
   },
@@ -87,8 +79,8 @@
    "source": [
     "# Over-damped Langevin integrator definition\n",
     "dt = 0.00001 #0.000005\n",
-    "seed = 2 # Seed = -1 used random device as seed\n",
-    "bodytype = 'rigidbody'\n",
+    "seed = 2 # seed 2 good used for pentameric ring formation; seed = -1 uses random device as seed\n",
+    "bodytype = 'rigidbody' # three rotational degrees of freedom\n",
     "integrator = odLangevin(dt, seed, bodytype) \n",
     "integrator.setKbT(0.1)"
    ]
@@ -100,9 +92,6 @@
    "outputs": [],
    "source": [
     "# Define boundary (choose either spherical or box)\n",
-    "# sphericalBoundary = msmrd2.sphere(radius,'reflective')\n",
-    "#boxBoundary = msmrd2.box(boxsize,boxsize,boxsize,'periodic')\n",
-    "#integrator.setBoundary(boxBoundary)\n",
     "sphereBoundary = msmrd2.sphere(boxsize,'reflective')\n",
     "integrator.setBoundary(sphereBoundary)"
    ]
@@ -118,7 +107,6 @@
     "strength = 200.0\n",
     "patch1 = np.array([1.,0.,0.])\n",
     "patch2 = np.array([np.cos(3*np.pi/5.0),np.sin(3*np.pi/5.0),0.])\n",
-    "#patch2 = np.array([-1.,0.,0.])\n",
     "patchesCoordinates = [patch1, patch2]\n",
     "potentialPatchyParticle = patchyParticle(sigma, strength, patchesCoordinates)\n",
     "integrator.setPairPotential(potentialPatchyParticle)"
@@ -130,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Integrate particle list and print only positions \n",
+    "# Integrate the particles, save to .xyz to produce VMD output (additional overhead)\n",
     "timesteps = 5000000\n",
     "stride = 2500 #1000\n",
     "datafile  = open('../../data/vmd/patchyParticles.xyz', 'w')\n",
@@ -151,8 +139,44 @@
     "        print(\"Percentage complete: \", 100*i/timesteps, \"%\", end=\"\\r\")\n",
     "datafile.close()\n",
     "# Generate TCL script to visualize with VMD\n",
-    "msmrdvis.generateTCL_patchyParticles(numparticles = numparticles, tclfname = \"../../data/vmd/patchyParticles2vmd.tcl\")\n",
+    "msmrdvis.generateTCL_patchyParticles(numparticles = numparticles, \n",
+    "                                     outfname = \"patchyParticles\", \n",
+    "                                     tclfname = \"../../data/vmd/patchyParticles_2vmd.tcl\")\n",
     "print(\"Percentage complete: \", 100, \" %\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To load the movie go to /data/vmd and run in a terminal \"vmd -e patchyPacrticles_2vmd.tcl\".\n",
+    "\n",
+    "## In case VMD is not desired\n",
+    "\n",
+    "In case VMD output is not desired, below we simply integrate the model and show the output directly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Integrate particle list and print only positions of first and last particle in list\n",
+    "timesteps = 10\n",
+    "print('{:<10s}{:<15s}{:<40s}{:<40s}'.format(\"Iteration\", \"Time\", \"Position (first particle)\", \"Position (last particle)\"))\n",
+    "for i in range(timesteps):\n",
+    "    print('{:<10d}{:<15f}{:<40s}{:<50s}'.format(i, integrator.clock, str(partlist[0].position), str(partlist[numparticles-1].position)))\n",
+    "    integrator.integrate(partlist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calculate potential and plot\n",
+    "\n",
+    "Plots the potential for the aligned and misaligned case"
    ]
   },
   {
@@ -218,134 +242,6 @@
     "plt.yticks([])\n",
     "#plt.savefig('patchyParticles_potential.pdf', bbox_inches='tight')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Other tests"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "part1 = msmrd2.particle(1.0, 1.0, pos1, theta1)\n",
-    "part2 = msmrd2.particle(1.0, 1.0, pos2[20], theta2p)\n",
-    "potentialPatchyParticle.forceTorque(part1,part2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def U(x, sigma, xstar, xcritical, eps, a, b):\n",
-    "    if (xstar>xcritical):\n",
-    "        raise ValueError('xstar should be smaller than xcritical.')\n",
-    "    resultm2 = np.array([])\n",
-    "    resultm1 = np.array([])\n",
-    "    result0 = np.array([])\n",
-    "    x0 = x[x<0]\n",
-    "    if len(x0) > 0:\n",
-    "        xm2 = x0[x0 < -xcritical]\n",
-    "        resultm2 = 0.0*xm2\n",
-    "        xm1 = x0[x0 >= -xcritical]\n",
-    "        xm1 = xm1[xm1 < -xstar]\n",
-    "        resultm1 = eps*b*(xcritical/sigma + xm1/sigma)**2\n",
-    "        x0 = x0[x0 >= -xstar]\n",
-    "        result0 = eps*(1.0 - a*(x0/sigma)**2)\n",
-    "    x1 = x[x>=0]\n",
-    "    x1 = x1[x1<xstar]\n",
-    "    result1 = eps*(1.0 - a*(x1/sigma)**2)\n",
-    "    x2 = x[x>=xstar]\n",
-    "    x2 = x2[x2<xcritical]\n",
-    "    result2 = eps*b*(xcritical/sigma - x2/sigma)**2\n",
-    "    x3 = x[x>=xcritical]\n",
-    "    result3 = 0.0*x3 \n",
-    "    return np.concatenate((resultm2, resultm1, result0, result1, result2, result3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calculateContinuityParametrs(sigma, xstar, a):\n",
-    "    xcritical = sigma**2/(a*xstar)\n",
-    "    b = (1.0 - a*(xstar/sigma)**2)/(xcritical/sigma - xstar/sigma)**2\n",
-    "    return xcritical, b\n",
-    "def calculateContinuityParametrs2(sigma, xstar, a):\n",
-    "    xcritical = sigma**2/(a*xstar)\n",
-    "    b = -(1.0 - a*(xstar/sigma)**2)/(xcritical/sigma - xstar/sigma)**2\n",
-    "    return xcritical, b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sigmaRep = 1.0\n",
-    "# Repulsive part\n",
-    "eps = 50.0 #100.0\n",
-    "a = 1.5\n",
-    "xstar = 0.75*sigmaRep\n",
-    "xcritical, b = calculateContinuityParametrs(sigmaRep,xstar,a)\n",
-    "sigma = 1.0\n",
-    "# Attractive patches part\n",
-    "eps2 = -7.5\n",
-    "a2 = 40.0\n",
-    "xstar2 = 0.1*sigma\n",
-    "xcritical2, b2 = calculateContinuityParametrs(sigma,xstar2,a2)\n",
-    "# Isotropic attractive\n",
-    "eps3 = -0.0\n",
-    "a3 = 0.75 # 0.5#0.55\n",
-    "xstar3 = 0.95*sigma\n",
-    "xcritical3, b3 = calculateContinuityParametrs(sigma,xstar3,a3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = np.arange(0,2.0*sigma,0.001)\n",
-    "y1 = U(x, sigmaRep, xstar, xcritical, eps, a, b)\n",
-    "y21 = U(x - sigma, sigma, xstar2, xcritical2, eps2, a2, b2)\n",
-    "y22 = U(x + -0.8*sigma, sigma, xstar2, xcritical2, eps2, a2, b2)\n",
-    "y3 = U(x, sigma, xstar3, xcritical3, eps3, a3, b3)\n",
-    "ym = y1 + y21 + y3\n",
-    "yp = y1 + y22 + y3\n",
-    "plt.plot(x,ym, '-b')\n",
-    "plt.plot(x,yp, '-r')\n",
-    "plt.plot(x, 0*x, '--k', lw=0.5)\n",
-    "plt.xlim([0, 2*sigma])\n",
-    "#plt.ylim([-25.0, 100])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "yy = U(x, sigma, xstar2, xcritical2, eps2, a2, b2)\n",
-    "plt.plot(x,yy, '-b')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
