--- a/examples/models/patchyProteinsMarkovSwitch.ipynb
+++ b/examples/models/patchyProteinsMarkovSwitch.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Patchy proteins with Markov Switch potential \n",
+    "\n",
+    "Implempentation of two diffusing patchy particles (rigid bodies). One with 6 patches (one stronger than the others) and the second one with only one patch. The second one can change conformation by turning on and off its patch. The potenial is based on patchy particles Angular2, and it is defined in the code as pathcy protein Markov Switch potential. Once a binding is formed between atches, there is only one preferred relative orientation. This potential requires using the overdamped Langevin with Markovian switch integrator."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -62,6 +71,7 @@
     "orientations = [ np.array([1.,0.,0.,0.]), np.array([np.cos(np.pi/2),0.,0.,np.sin(np.pi/2)])]\n",
     "part1 = msmrd2.particle(p1type, p1state, D0list[p1state], Drot0list[p1state], positions[0], orientations[0])\n",
     "part2 = msmrd2.particle(p2type, p2state, D1list[p2state], Drot1list[p2state], positions[1], orientations[1])\n",
+    "part1.setMSMoff() #Important or it will yield error.\n",
     "partlist = msmrd2.integrators.particleList([part1, part2])"
    ]
   },
@@ -73,8 +83,8 @@
    "source": [
     "# Over-damped Langevin integrator definition\n",
     "dt = 0.00001 #0.000005\n",
-    "seed = 0 # If seed = -1 uses random device as seed\n",
-    "bodytype = 'rigidbody' # Mix indicates there can be different types of rigidbody particles\n",
+    "seed = 0 # If seed = -1, uses random device as seed\n",
+    "bodytype = 'rigidbody' # three rotational degrees of freedom\n",
     "integrator = odLangevinMS(MSMlist, dt, seed, bodytype) \n",
     "integrator.setKbT(1.0)"
    ]
@@ -124,9 +134,9 @@
    "source": [
     "# Integrate particle list and print only positions. Adds an extra far away particle to \n",
     "# emulate change of color/conformation since VMD can only handle a fixed number of particle with fixed types.\n",
-    "timesteps = 500000 #50000000\n",
-    "stride = 100 #10 #1000\n",
-    "datafile  = open('../../data/vmd/patchyProteinsMS.xyz', 'w')\n",
+    "timesteps = 1000000 #50000000\n",
+    "stride = 50 #10 #1000\n",
+    "datafile  = open('../../data/vmd/patchyProteinsMarkovSwitch.xyz', 'w')\n",
     "farAwayPostion = np.array([30*radius, 0, 0])\n",
     "numSpheres2Draw= 15\n",
     "# Define reference vectors for plotting small protein\n",
@@ -186,17 +196,21 @@
     "        print(\"Percentage complete: \", 100*i/timesteps, \"%\", end=\"\\r\")\n",
     "datafile.close()\n",
     "# Generate TCL script to visualize with VMD\n",
-    "msmrdvis.generateTCL_patchyProteinsMSV2(numparticles = numparticles, tclfname = \"../../data/vmd/patchyProteinsMS2vmd.tcl\")\n",
+    "msmrdvis.generateTCL_patchyProteinsMSV2(numparticles = numparticles, \n",
+    "                                        outfname = \"patchyProteinsMarkovSwitch\",\n",
+    "                                        tclfname = \"../../data/vmd/patchyProteinsMarkovSwitch_2vmd.tcl\")\n",
     "print(\"Percentage complete: \", 100, \" %\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "msmrdvis.generateTCL_patchyProteinsMSV2(numparticles = numparticles, tclfname = \"../../data/vmd/patchyProteinsMS2vmd.tcl\")"
+    "To load the movie go to /data/vmd and run in a terminal \"vmd -e patchyProteinsMarkovSwitch_2vmd.tcl\".\n",
+    "\n",
+    "## In case VMD is not desired\n",
+    "\n",
+    "In case VMD output is not desired, below we simply integrate the model and show the output directly."
    ]
   },
   {
@@ -205,25 +219,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Old version of plotting patchy proteinMS\n",
-    "# v0 = part.position\n",
-    "# if part.state == 0:\n",
-    "#     v1 = v0 + 0.4*sigma*quats.rotateVec(patchesCoordinates2[0], part.orientation)\n",
-    "#     # Main particle 2\n",
-    "#     datafile.write('type_0' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
-    "#     datafile.write('type_3' + ' ' + ' '.join(map(str, farAwayPostion)) + '\\n')\n",
-    "#     # Patch\n",
-    "#     datafile.write('type_2' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
-    "#     datafile.write('type_4' + ' ' + ' '.join(map(str, farAwayPostion)) + '\\n')\n",
-    "\n",
-    "# else:\n",
-    "#     v1 = v0 + 0.4*sigma*quats.rotateVec(patchesCoordinates2[0], part.orientation)\n",
-    "#     # Main particle 2\n",
-    "#     datafile.write('type_0' + ' ' + ' '.join(map(str, farAwayPostion)) + '\\n')\n",
-    "#     datafile.write('type_3' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
-    "#     # Patch\n",
-    "#     datafile.write('type_2' + ' ' + ' '.join(map(str, farAwayPostion)) + '\\n')\n",
-    "#     datafile.write('type_4' + ' ' + ' '.join(map(str, v1)) + '\\n')"
+    "# Integrate particle list and print only positions of first and last particle in list\n",
+    "timesteps = 10\n",
+    "print('{:<10s}{:<15s}{:<40s}{:<40s}'.format(\"Iteration\", \"Time\", \"Position 1\", \"Position 2\"))\n",
+    "for i in range(timesteps):\n",
+    "    print('{:<10d}{:<15f}{:<40s}{:<50s}'.format(i, integrator.clock, str(partlist[0].position), str(partlist[1].position)))\n",
+    "    integrator.integrate(partlist)"
    ]
   },
   {
