--- a/examples/models/patchyParticlesAngular.ipynb
+++ b/examples/models/patchyParticlesAngular.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Patchy particles angular potential \n",
+    "\n",
+    "Implempentation of two freely diffusing patchy particles (rigid bodies) with two patches and pair interactions given by the patchy particle angular potential defined in the main code. The main difference between this potential and the patchy particle potential is the addition of angular dependence. Each binding between patches will have two possible preferred relative orientations. This yields two possible conformations per binding between patches (one per metastable orientation). "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -21,8 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define arbitrarily large list of rod-like particles\n",
-    "np.random.seed(seed=1) # seed 1 good for pentamer \n",
+    "# Define arbitrarily large list of patchy particles\n",
     "numparticles = 2\n",
     "boxsize = 3 \n",
     "D = 1.0\n",
@@ -31,19 +39,6 @@
     "positionList = [np.array([-1.0,0,0]), np.array([0.,0.,0.]), np.array([1.0,0.,0.]), \n",
     "                np.array([2.0,0.,0.]), np.array([3.0,0.,0.])]\n",
     "orientationList = [ np.array([1.,0.,0.,0.]), np.array([np.cos(np.pi/2),0.,0.,np.sin(np.pi/2)])]\n",
-    "\n",
-    "\"\"\"\n",
-    "# Position List for pentamer IC\n",
-    "th0 = 3*np.pi/5.0\n",
-    "th = np.pi - th0\n",
-    "thextra = np.pi/2 + th/2.0\n",
-    "positionList = []\n",
-    "orientationList = []\n",
-    "for i in range(5):\n",
-    "    positionList.append(0.85*np.array([np.cos(th*i),np.sin(th*i),0.0]))\n",
-    "    orientation = np.array([np.cos(0.5*(th*i + thextra)),0,0,np.sin(0.5*(th*i + thextra))])\n",
-    "    orientationList.append(orientation)\n",
-    "\"\"\"\n",
     "\n",
     "for i in range(numparticles):\n",
     "    \n",
@@ -60,11 +55,7 @@
     "                \n",
     "    orientation = np.array([np.random.rand(),np.random.rand(),np.random.rand(),np.random.rand()])\n",
     "    orientation = orientation/np.linalg.norm(orientation)\n",
-    "    #orientation = np.array([1.,0.,0.,0.])\n",
-    "    #orientation = np.array([np.cos(np.pi/4.0), np.sin(np.pi/4), 0.0, 0.0]) #Rotate 90 degrees in x axis\n",
     "    part = msmrd2.particle(D, Drot, position, orientation)\n",
-    "    #part = msmrd2.particle(D, Drot, positionList[i], orientation)\n",
-    "    #part = msmrd2.particle(D, Drot, positionList[i], orientationList[i])\n",
     "    pyPartlist.append(part)"
    ]
   },
@@ -88,9 +79,9 @@
     "# Over-damped Langevin integrator definition\n",
     "dt = 0.00001 #0.000005\n",
     "seed = -1 # Negative seed, uses random device as seed\n",
-    "bodytype = 'rigidbody'\n",
+    "bodytype = 'rigidbody' # three rotational degrees of freedom\n",
     "integrator = odLangevin(dt, seed, bodytype) \n",
-    "#integrator.setKbT(0.1)"
+    "#integrator.setKbT(0.1) # possible to change KbT (Boltzmann constant and temperature)"
    ]
   },
   {
@@ -100,11 +91,8 @@
    "outputs": [],
    "source": [
     "# Define boundary (choose either spherical or box)\n",
-    "# sphericalBoundary = msmrd2.sphere(radius,'reflective')\n",
     "boxBoundary = msmrd2.box(boxsize,boxsize,boxsize,'reflective')\n",
-    "integrator.setBoundary(boxBoundary)\n",
-    "#sphereBoundary = msmrd2.sphere(boxsize,'reflective')\n",
-    "#integrator.setBoundary(sphereBoundary)"
+    "integrator.setBoundary(boxBoundary)"
    ]
   },
   {
@@ -120,7 +108,6 @@
     "angleDiff = 3*np.pi/5.0\n",
     "patch1 = np.array([np.cos(angleDiff/2),np.sin(angleDiff/2),0.])\n",
     "patch2 = np.array([np.cos(-angleDiff/2),np.sin(-angleDiff/2),0.])\n",
-    "#patch2 = np.array([-1.,0.,0.])\n",
     "patchesCoordinates = [patch1, patch2]\n",
     "potentialPatchyParticleAngular = patchyParticleAngular(sigma, strength, angularStrength, patchesCoordinates)\n",
     "integrator.setPairPotential(potentialPatchyParticleAngular)"
@@ -132,24 +119,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save Symmetry quaternion(s) in particle (structural symmetry of certain rotations encoded in a quaternion) \n",
-    "# Just proof of concept, not really used in this example\n",
-    "#rotationAxisAngle = np.pi*np.array([np.cos(0.5*angleDiff),np.sin(0.5*angleDiff),0.]) # 180 deree rotation along axis\n",
-    "#symQuaternion = quats.angle2quat(rotationAxisAngle)\n",
-    "#symmetryQuaternionsList = [symQuaternion]\n",
-    "#for i in range(numparticles):\n",
-    "#    partlist[i].setSymmetryQuaternions(len(symmetryQuaternionsList ), symmetryQuaternionsList)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Integrate particle list and print only positions \n",
-    "timesteps = 1000000 #20000000\n",
-    "stride = 1000 #250 #1000\n",
+    "timesteps = 10000000 #20000000\n",
+    "stride = 500 #250 #1000\n",
     "datafile  = open('../../data/vmd/patchyParticlesAngular.xyz', 'w')\n",
     "for i in range(timesteps):\n",
     "    if i%stride == 0:\n",
@@ -170,8 +142,33 @@
     "# Generate TCL script to visualize with VMD\n",
     "msmrdvis.generateTCL_patchyParticles(numparticles = numparticles, \n",
     "                                     outfname = \"patchyParticlesAngular\", \n",
-    "                                     tclfname = \"../../data/vmd/patchyParticlesAngular2vmd.tcl\")\n",
+    "                                     tclfname = \"../../data/vmd/patchyParticlesAngular_2vmd.tcl\")\n",
     "print(\"Percentage complete: \", 100, \" %\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To load the movie go to /data/vmd and run in a terminal \"vmd -e patchyPacrticlesAngular_2vmd.tcl\".\n",
+    "\n",
+    "## In case VMD is not desired\n",
+    "\n",
+    "In case VMD output is not desired, below we simply integrate the model and show the output directly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Integrate particle list and print only positions of first and last particle in list\n",
+    "timesteps = 10\n",
+    "print('{:<10s}{:<15s}{:<40s}{:<40s}'.format(\"Iteration\", \"Time\", \"Position 1\", \"Position 2\"))\n",
+    "for i in range(timesteps):\n",
+    "    print('{:<10d}{:<15f}{:<40s}{:<50s}'.format(i, integrator.clock, str(partlist[0].position), str(partlist[1].position)))\n",
+    "    integrator.integrate(partlist)"
    ]
   },
   {
