--- a/examples/models/patchyParticlesAngular2.ipynb
+++ b/examples/models/patchyParticlesAngular2.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Patchy particles angular potential (version 2)\n",
+    "\n",
+    "Implempentation of two freely diffusing patchy particles (rigid bodies) with two patches and pair interactions given by the patchy particle angular 2 potential defined in the main code. The main difference between this potential and the original version is that this potential only has one preferred relative orientation per patch binding. This yields only one possible conformation per binding between patches. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -21,8 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define arbitrarily large list of rod-like particles\n",
-    "np.random.seed(seed=1) # seed 1 good for pentamer \n",
+    "# Define arbitrarily large list of patchy particles\n",
     "numparticles = 2\n",
     "boxsize = 3\n",
     "D = 1.0\n",
@@ -31,19 +39,6 @@
     "positionList = [np.array([-1.0,0,0]), np.array([0.,0.,0.]), np.array([1.0,0.,0.]), \n",
     "                np.array([2.0,0.,0.]), np.array([3.0,0.,0.])]\n",
     "orientationList = [ np.array([1.,0.,0.,0.]), np.array([np.cos(np.pi/2),0.,0.,np.sin(np.pi/2)])]\n",
-    "\n",
-    "\"\"\"\n",
-    "# Position List for pentamer IC\n",
-    "th0 = 3*np.pi/5.0\n",
-    "th = np.pi - th0\n",
-    "thextra = np.pi/2 + th/2.0\n",
-    "positionList = []\n",
-    "orientationList = []\n",
-    "for i in range(5):\n",
-    "    positionList.append(0.85*np.array([np.cos(th*i),np.sin(th*i),0.0]))\n",
-    "    orientation = np.array([np.cos(0.5*(th*i + thextra)),0,0,np.sin(0.5*(th*i + thextra))])\n",
-    "    orientationList.append(orientation)\n",
-    "\"\"\"\n",
     "\n",
     "for i in range(numparticles):\n",
     "    \n",
@@ -60,11 +55,7 @@
     "                \n",
     "    orientation = np.array([2*np.random.rand()-1, 2*np.random.rand()-1,2*np.random.rand()-1,2*np.random.rand()-1])\n",
     "    orientation = orientation/np.linalg.norm(orientation)\n",
-    "    #orientation = np.array([1.,0.,0.,0.])\n",
-    "    #orientation = np.array([np.cos(np.pi/4.0), np.sin(np.pi/4), 0.0, 0.0]) #Rotate 90 degrees in x axis\n",
     "    part = msmrd2.particle(D, Drot, position, orientation)\n",
-    "    #part = msmrd2.particle(D, Drot, positionList[i], orientation)\n",
-    "    #part = msmrd2.particle(D, Drot, positionList[i], orientationList[i])\n",
     "    pyPartlist.append(part)"
    ]
   },
@@ -75,7 +66,7 @@
    "outputs": [],
    "source": [
     "# Create list of particles that can be read from msmrd\n",
-    "# Note the particles in this list will be independent from the python list.\n",
+    "# note the particles in this list will be independent from the python list.\n",
     "partlist = msmrd2.integrators.particleList(pyPartlist)"
    ]
   },
@@ -88,9 +79,9 @@
     "# Over-damped Langevin integrator definition\n",
     "dt = 0.00001 #0.000005\n",
     "seed = -1 #1 #-1 # Negative seed, uses random device as seed\n",
-    "bodytype = 'rigidbody'\n",
+    "bodytype = 'rigidbody' # three rotational degrees of freedom\n",
     "integrator = odLangevin(dt, seed, bodytype) \n",
-    "#integrator.setKbT(0.1)"
+    "#integrator.setKbT(0.1) # possible to change KbT (Boltzmann constant and temperature)"
    ]
   },
   {
@@ -100,7 +91,6 @@
    "outputs": [],
    "source": [
     "# Define boundary (choose either spherical or box)\n",
-    "# sphericalBoundary = msmrd2.sphere(radius,'reflective')\n",
     "boxBoundary = msmrd2.box(boxsize,boxsize,boxsize,'reflective')\n",
     "integrator.setBoundary(boxBoundary)"
    ]
@@ -118,7 +108,6 @@
     "angleDiff = 3*np.pi/5.0\n",
     "patch1 = np.array([np.cos(angleDiff/2),np.sin(angleDiff/2),0.])\n",
     "patch2 = np.array([np.cos(-angleDiff/2),np.sin(-angleDiff/2),0.])\n",
-    "#patch2 = np.array([-1.,0.,0.])\n",
     "patchesCoordinates = [patch1, patch2]\n",
     "potentialPatchyParticleAngular2 = patchyParticleAngular2(sigma, strength, angularStrength, patchesCoordinates)\n",
     "integrator.setPairPotential(potentialPatchyParticleAngular2)"
@@ -131,8 +120,8 @@
    "outputs": [],
    "source": [
     "#Integrate particle list and print only positions \n",
-    "timesteps = 1000000 #20000000\n",
-    "stride = 250 #250 #1000\n",
+    "timesteps = 10000000 #20000000\n",
+    "stride = 500 #250 #1000\n",
     "datafile  = open('../../data/vmd/patchyParticlesAngular2.xyz', 'w')\n",
     "for i in range(timesteps):\n",
     "    if i%stride == 0:\n",
@@ -158,39 +147,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To load the movie go to /data/vmd and run in a terminal \"vmd -e patchyPacrticlesAngular2_2vmd.tcl\".\n",
+    "\n",
+    "## In case VMD is not desired\n",
+    "\n",
+    "In case VMD output is not desired, below we simply integrate the model and show the output directly."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # # Colorful integration particle list and print only positions \n",
-    "# timesteps = 1000000 #20000000\n",
-    "# stride = 1000 #250 #1000\n",
-    "# datafile  = open('../../data/vmd/patchyParticlesAngular2.xyz', 'w')\n",
-    "# for i in range(timesteps):\n",
-    "#     if i%stride == 0:\n",
-    "#         datafile.write(str(3*len(partlist)) + '\\n')\n",
-    "#         datafile.write(str(0) + '\\n')\n",
-    "#     for j, part in enumerate(partlist):\n",
-    "#         if i%stride == 0:\n",
-    "#             v0 = part.position\n",
-    "#             v1 = v0 + 0.5*sigma*quats.rotateVec(patchesCoordinates[0], part.orientation)\n",
-    "#             v2 = v0 + 0.5*sigma*quats.rotateVec(patchesCoordinates[1], part.orientation)\n",
-    "#             if j == 0:\n",
-    "#                 datafile.write('type_00' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
-    "#             else:\n",
-    "#                 datafile.write('type_01' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
-    "#             datafile.write('type_1' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
-    "#             datafile.write('type_2' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
-    "#     integrator.integrate(partlist)\n",
-    "#     if i%10000 == 0:\n",
-    "#         print(\"Percentage complete: \", 100*i/timesteps, \"%\", end=\"\\r\")\n",
-    "# datafile.close()\n",
-    "# # Generate TCL script to visualize with VMD\n",
-    "# msmrdvis.generateTCL_patchyParticlesMultiColor(numparticles = numparticles, \n",
-    "#                                      outfname = \"patchyParticlesAngular2\", \n",
-    "#                                      tclfname = \"../../data/vmd/patchyParticlesAngular2_2vmd.tcl\")\n",
-    "# print(\"Percentage complete: \", 100, \" %\")"
+    "# Integrate particle list and print only positions of first and last particle in list\n",
+    "timesteps = 10\n",
+    "print('{:<10s}{:<15s}{:<40s}{:<40s}'.format(\"Iteration\", \"Time\", \"Position 1\", \"Position 2\"))\n",
+    "for i in range(timesteps):\n",
+    "    print('{:<10d}{:<15f}{:<40s}{:<50s}'.format(i, integrator.clock, str(partlist[0].position), str(partlist[1].position)))\n",
+    "    integrator.integrate(partlist)"
    ]
   },
   {
