--- a/examples/models/patchyProteins.ipynb
+++ b/examples/models/patchyProteins.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Patchy proteins potential \n",
+    "\n",
+    "Implempentation of two diffusing patchy particles (rigid bodies). One with 6 patches (one stronger than the others) and the second one with only one patch. The potenial based on patchy particles is defined in the code as pathcy protein potential since it is supposed to emulate protein-protein interaction. Once a binding is formed between atches, there is no preferred relative orientation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -21,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define two particle list of rigid body particles\n",
+    "# Define arbitrarily large list of patchy particles\n",
     "numparticles = 2\n",
     "D = 1.0\n",
     "Drot = 1.0\n",
@@ -41,7 +50,7 @@
    "outputs": [],
    "source": [
     "# Create list of particles that can be read from msmrd\n",
-    "# Note the particles in this list will be independent from the python list.\n",
+    "# note the particles in this list will be independent from the python list.\n",
     "partlist = msmrd2.integrators.particleList(pyPartlist)"
    ]
   },
@@ -54,7 +63,7 @@
     "# Over-damped Langevin integrator definition\n",
     "dt = 0.00001 #0.000005\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
-    "bodytype = 'rigidbody' \n",
+    "bodytype = 'rigidbody' # three rotational degrees of freedom\n",
     "integrator = odLangevin(dt, seed, bodytype) \n",
     "integrator.setKbT(1.0)"
    ]
@@ -132,52 +141,21 @@
     "        print(\"Percentage complete: \", 100*i/timesteps, \"%\", end=\"\\r\")\n",
     "datafile.close()\n",
     "# Generate TCL script to visualize with VMD\n",
-    "msmrdvis.generateTCL_patchyProteins(numparticles = numparticles, tclfname = \"../../data/vmd/patchyProteins2vmd.tcl\")\n",
+    "msmrdvis.generateTCL_patchyProteins(numparticles = numparticles, \n",
+    "                                    outfname = \"patchyProteins\", \n",
+    "                                    tclfname = \"../../data/vmd/patchyProteins_2vmd.tcl\")\n",
     "print(\"Percentage complete: \", 100, \" %\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Calculate potential for aligned and misaligned molecules\n",
-    "def patchyProteinEvaluate(p1,p2,or1,or2,type1,type2):\n",
-    "    part1 = msmrd2.particle(1.0, 1.0, p1, or1)\n",
-    "    part1.setType(type1)\n",
-    "    part2 = msmrd2.particle(1.0, 1.0, p2, or2)\n",
-    "    part2.setType(type2)\n",
-    "    return potentialPatchyProtein.evaluate(part1, part2)\n",
+    "To load the movie go to /data/vmd and run in a terminal \"vmd -e patchyProteins_2vmd.tcl\".\n",
     "\n",
-    "dist = np.arange(0, 2*sigma, 0.01)\n",
-    "pos1 = np.array([0., 0., 0.])\n",
-    "pos2 = np.array([[i, 0., 0.] for i in dist])\n",
-    "phi1 = 0.0\n",
-    "phi2 = np.pi\n",
-    "phi1p = np.pi\n",
-    "phi2p = 0.0\n",
-    "u = np.array([0.,0.,1.]) #rotationAxis\n",
-    "# Quaternions that rotate phi along axis u\n",
-    "theta1 = np.array([np.cos(0.5*phi1 ),\n",
-    "                   np.sin(0.5*phi1 )*u[0],\n",
-    "                   np.sin(0.5*phi1 )*u[1],\n",
-    "                   np.sin(0.5*phi1 )*u[2]]) \n",
-    "theta2 = np.array([np.cos(0.5*phi2 ),\n",
-    "                   np.sin(0.5*phi2 )*u[0],\n",
-    "                   np.sin(0.5*phi2 )*u[1],\n",
-    "                   np.sin(0.5*phi2 )*u[2]]) \n",
-    "theta1p = np.array([np.cos(0.5*phi1p ),\n",
-    "                   np.sin(0.5*phi1p )*u[0],\n",
-    "                   np.sin(0.5*phi1p )*u[1],\n",
-    "                   np.sin(0.5*phi1p )*u[2]]) \n",
-    "theta2p = np.array([np.cos(0.5*phi2p ),\n",
-    "                   np.sin(0.5*phi2p )*u[0],\n",
-    "                   np.sin(0.5*phi2p )*u[1],\n",
-    "                   np.sin(0.5*phi2p )*u[2]]) \n",
+    "## In case VMD is not desired\n",
     "\n",
-    "potantialAligned = [patchyProteinEvaluate(pos1,p2,theta1,theta2, 0, 1) for p2 in pos2]\n",
-    "potantialMisaligned = [patchyProteinEvaluate(pos1,p2,theta1p,theta2p, 0, 1) for p2 in pos2]"
+    "In case VMD output is not desired, below we simply integrate the model and show the output directly."
    ]
   },
   {
@@ -186,38 +164,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot potential\n",
-    "plt.plot(dist, potantialAligned, label = \"aligned\")\n",
-    "plt.plot(dist, potantialMisaligned, label = \"misaligned\")\n",
-    "plt.plot(dist, 0*dist, '--k', lw=0.5)\n",
-    "plt.legend()\n",
-    "plt.xlim([0,2*sigma])"
+    "# Integrate particle list and print only positions of first and last particle in list\n",
+    "timesteps = 10\n",
+    "print('{:<10s}{:<15s}{:<40s}{:<40s}'.format(\"Iteration\", \"Time\", \"Position 1\", \"Position 2\"))\n",
+    "for i in range(timesteps):\n",
+    "    print('{:<10d}{:<15f}{:<40s}{:<50s}'.format(i, integrator.clock, str(partlist[0].position), str(partlist[1].position)))\n",
+    "    integrator.integrate(partlist)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "part1 = msmrd2.particle(1.0, 1.0, pos1, theta1p)\n",
-    "part1.setType(0)\n",
-    "part2 = msmrd2.particle(1.0, 1.0, pos2[20], theta2p)\n",
-    "part2.setType(1)\n",
-    "potentialPatchyProtein.forceTorque(part1, part2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -231,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
