--- a/examples/scripts_drafts/estimateDiffusionPentamer.ipynb
+++ b/examples/scripts_drafts/estimateDiffusionPentamer.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Estimate diffusion\n",
+    "\n",
+    "Creates pentemeric ring molecule formed by five patchy particles, and simulates for some time (even creates vmd output). Then it estimates translational and rotational diffusion coefficients assuming isotropic diffusion. The number of particles can be changed between 2 and 5 to obtain the diffusion coefficients of the different structures."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -24,7 +33,7 @@
     "# Define particle list with between two and five particles to estimate the diffusion\n",
     "# of dimers/ trimers / cuatrimers? and pentamer\n",
     "np.random.seed(seed=1) # seed 1 good for pentamer \n",
-    "numparticles = 4 # It has value between 2 and 5\n",
+    "numparticles = 5 # It has value between 2 and 5\n",
     "boxsize = 3\n",
     "D = 1.0\n",
     "Drot = 1.0\n",
