Improvements to MAPK potential
Still has some issues/bugs

--- a/examples/tests/integratorMAPK.ipynb
+++ b/examples/tests/integratorMAPK.ipynb
@@ -11,7 +11,7 @@
     "import msmrd2\n",
     "import msmrd2.tools.quaternions as quats\n",
     "import msmrd2.visualization as msmrdvis\n",
-    "from msmrd2.potentials import patchyParticle\n",
+    "from msmrd2.potentials import patchyProteinMAPK\n",
     "from msmrd2.integrators import integratorMAPK "
    ]
   },
@@ -44,6 +44,8 @@
     "    orientation = np.array([np.random.rand(),np.random.rand(),np.random.rand(),np.random.rand()])\n",
     "    orientation = orientation/np.linalg.norm(orientation)\n",
     "    part = msmrd2.particle(D, Drot, position, orientation)\n",
+    "    part.setType(i)\n",
+    "    part.setState(0)\n",
     "    pyPartlist.append(part)"
    ]
   },
@@ -66,17 +68,17 @@
    "source": [
     "# Over-damped Langevin integrator definition\n",
     "dt = 0.00001 #0.000005\n",
-    "seed = 2 # seed 2 good used for pentameric ring formation; seed = -1 uses random device as seed\n",
+    "seed = -1 # seed 2 good used for pentameric ring formation; seed = -1 uses random device as seed\n",
     "bodytype = 'rigidbody' # three rotational degrees of freedom\n",
-    "anglePatches = np.pi\n",
-    "reactivationRateK = 0.5\n",
-    "reactivationRateP = 0.5\n",
+    "anglePatches = np.pi/2\n",
+    "reactivationRateK = 500\n",
+    "reactivationRateP = 500\n",
     "mapkIndex = [0]\n",
     "kinaseIndex = [1]\n",
     "phosIndex = [2]\n",
     "integrator = integratorMAPK(dt, seed, bodytype, anglePatches, reactivationRateK, reactivationRateP, \n",
     "                            mapkIndex, kinaseIndex, phosIndex) \n",
-    "integrator.setKbT(0.1)"
+    "#integrator.setKbT(0.1)"
    ]
   },
   {
@@ -102,12 +104,11 @@
     "# This values are fixed and should match those used to determine metastable states in potential and trajectory.\n",
     "patchesCoordinates1 = [np.array([np.cos(anglePatches/2), np.sin(anglePatches/2), 0.]), \n",
     "                       np.array([np.cos(-anglePatches/2), np.sin(-anglePatches/2), 0.])]\n",
-    "patchesCoordinates2 = [np.array([1.,0.,0.])]\n",
+    "patchesCoordinates2 = [ np.array([np.cos(-anglePatches/2), np.sin(-anglePatches/2), 0.]) ]\n",
     "# Defines patchy protein potential\n",
-    "potentialPatchyProteinMS = patchyProteinMarkovSwitch(sigma, strength, angularStrength, \n",
-    "                                                     patchesCoordinates1, patchesCoordinates2)\n",
+    "potentialPatchyProteinMAPK = patchyProteinMAPK(sigma, strength, patchesCoordinates1, patchesCoordinates2)\n",
     "# Incorporate potential into integrator\n",
-    "integrator.setPairPotential(potentialPatchyProteinMS)"
+    "integrator.setPairPotential(potentialPatchyProteinMAPK)"
    ]
   },
   {
@@ -118,30 +119,97 @@
    "source": [
     "# Integrate the particles, save to .xyz to produce VMD output (additional overhead)\n",
     "timesteps = 5000000\n",
-    "stride = 2500 #1000\n",
-    "datafile  = open('../../data/vmd/patchyParticles.xyz', 'w')\n",
+    "stride = 250 #1000\n",
+    "datafile  = open('../../data/vmd/patchyProteinMAPK.xyz', 'w')\n",
     "for i in range(timesteps):\n",
     "    if i%stride == 0:\n",
-    "        datafile.write(str(3*len(partlist)) + '\\n')\n",
+    "        datafile.write(str(9) + '\\n')\n",
     "        datafile.write(str(0) + '\\n')\n",
     "    for j, part in enumerate(partlist):\n",
     "        if i%stride == 0:\n",
-    "            v0 = part.position\n",
-    "            v1 = v0 + 0.5*sigma*quats.rotateVec(patchesCoordinates[0], part.orientation)\n",
-    "            v2 = v0 + 0.5*sigma*quats.rotateVec(patchesCoordinates[1], part.orientation)\n",
-    "            datafile.write('type_0' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
-    "            datafile.write('type_1' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
-    "            datafile.write('type_1' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
+    "            if part.type == 0:\n",
+    "                v0 = part.position\n",
+    "                v1 = v0 + 0.4*sigma*quats.rotateVec(patchesCoordinates1[0], part.orientation)\n",
+    "                v2 = v0 + 0.4*sigma*quats.rotateVec(patchesCoordinates1[1], part.orientation)\n",
+    "                datafile.write('type_0' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
+    "                if (part.state == 0):\n",
+    "                    datafile.write('type_1' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
+    "                    datafile.write('type_1' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
+    "                    datafile.write('type_2' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
+    "                    datafile.write('type_2' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
+    "                elif (part.state == 1):\n",
+    "                    datafile.write('type_1' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
+    "                    datafile.write('type_1' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
+    "                    datafile.write('type_2' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
+    "                    datafile.write('type_2' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
+    "                elif (part.state == 2):\n",
+    "                    datafile.write('type_1' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
+    "                    datafile.write('type_1' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
+    "                    datafile.write('type_2' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
+    "                    datafile.write('type_2' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
+    "                else:\n",
+    "                    datafile.write('type_1' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
+    "                    datafile.write('type_1' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
+    "                    datafile.write('type_2' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
+    "                    datafile.write('type_2' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
+    "            if part.type == 1:\n",
+    "                v0 = part.position\n",
+    "                if part.state == 0:\n",
+    "                    v1 = v0 + 0.4*sigma*quats.rotateVec(patchesCoordinates2[0], part.orientation)\n",
+    "                else:\n",
+    "                    v1 = 1 * v0\n",
+    "                datafile.write('type_0' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
+    "                datafile.write('type_2' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
+    "            if part.type == 2:\n",
+    "                v0 = part.position\n",
+    "                if part.state == 0:\n",
+    "                    v1 = v0 + 0.4*sigma*quats.rotateVec(patchesCoordinates2[0], part.orientation)\n",
+    "                else:\n",
+    "                    v1 = 1 * v0\n",
+    "                datafile.write('type_0' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
+    "                datafile.write('type_1' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
     "    integrator.integrate(partlist)\n",
     "    if i%5000 == 0:\n",
     "        print(\"Percentage complete: \", 100*i/timesteps, \"%\", end=\"\\r\")\n",
     "datafile.close()\n",
     "# Generate TCL script to visualize with VMD\n",
-    "msmrdvis.generateTCL_patchyParticles(numparticles = numparticles, \n",
-    "                                     outfname = \"patchyParticles\", \n",
-    "                                     tclfname = \"../../data/vmd/patchyParticles_2vmd.tcl\")\n",
+    "msmrdvis.generateTCL_patchyProteinMAPK(numparticles = numparticles, \n",
+    "                                    outfname = \"patchyProteinMAPK\", \n",
+    "                                    tclfname = \"../../data/vmd/patchyProteinMAPK_2vmd.tcl\")\n",
     "print(\"Percentage complete: \", 100, \" %\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To load the movie go to /data/vmd and run in a terminal \"vmd -e patchyProteinMAPK_2vmd.tcl\".\n",
+    "\n",
+    "## In case VMD is not desired\n",
+    "\n",
+    "In case VMD output is not desired, below we simply integrate the model and show the output directly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Integrate particle list and print only positions of first and last particle in list\n",
+    "timesteps = 10\n",
+    "print('{:<10s}{:<15s}{:<40s}{:<40s}'.format(\"Iteration\", \"Time\", \"Position 1\", \"Position 2\"))\n",
+    "for i in range(timesteps):\n",
+    "    print('{:<10d}{:<15f}{:<40s}{:<50s}'.format(i, integrator.clock, str(partlist[0].position), str(partlist[1].position)))\n",
+    "    integrator.integrate(partlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
