MAPK benchmark working

--- a/examples/tests/integratorMAPK.ipynb
+++ b/examples/tests/integratorMAPK.ipynb
@@ -87,11 +87,11 @@
    "source": [
     "# Over-damped Langevin integrator definition\n",
     "dt = 0.00001 #0.000005\n",
-    "seed = 6 # seed = -1 uses random device as seed\n",
+    "seed = -1 # seed = -1 uses random device as seed\n",
     "bodytype = 'rigidbody' # three rotational degrees of freedom\n",
     "anglePatches = np.pi/2\n",
-    "reactivationRateK = 500\n",
-    "reactivationRateP = 500\n",
+    "reactivationRateK = 10\n",
+    "reactivationRateP = 10\n",
     "mapkIndex = [0]\n",
     "kinaseIndex = [1]\n",
     "phosIndex = [2]\n",
@@ -137,7 +137,7 @@
    "outputs": [],
    "source": [
     "# Integrate the particles, save to .xyz to produce VMD output (additional overhead)\n",
-    "timesteps = 50000\n",
+    "timesteps = 5000000\n",
     "stride = 250 #250 #1000\n",
     "datafile  = open('../../data/vmd/patchyProteinMAPK.xyz', 'w')\n",
     "for i in range(timesteps):\n",
