Fixed minor bug, improved graphics

--- a/examples/tests/integratorMAPK.ipynb
+++ b/examples/tests/integratorMAPK.ipynb
@@ -23,8 +23,8 @@
    "source": [
     "# Define arbitrarily large list of patchy particles\n",
     "np.random.seed(seed=1) # seed 1 good used for pentameric ring formation \n",
-    "numparticles = 3\n",
-    "boxsize = 4\n",
+    "numparticles = 2\n",
+    "boxsize = 2.5\n",
     "D = 1.0\n",
     "Drot = 1.0\n",
     "pyPartlist = [] \n",
@@ -43,9 +43,7 @@
     "                \n",
     "    orientation = np.array([np.random.rand(),np.random.rand(),np.random.rand(),np.random.rand()])\n",
     "    orientation = orientation/np.linalg.norm(orientation)\n",
-    "    part = msmrd2.particle(D, Drot, position, orientation)\n",
-    "    part.setType(i)\n",
-    "    part.setState(0)\n",
+    "    part = msmrd2.particle(i, 0, D, Drot, position, orientation)\n",
     "    pyPartlist.append(part)"
    ]
   },
@@ -58,7 +56,7 @@
     "# alternative fixed position set up\n",
     "position1 = np.array([0.0, 0.0, 0.0]);\n",
     "position2 = np.array([np.cos(np.pi/4), np.sin(-np.pi/4), 0]);\n",
-    "position3 = np.array([-2, 0, 0]);\n",
+    "position3 = np.array([1, 0, 0]);\n",
     "orientation1 = np.array([1.0, 0.0, 0.0, 0.0]);\n",
     "orientation2 = np.array([np.cos(np.pi/2), 0.0, 0.0, np.sin(np.pi/2)]);\n",
     "orientation3 = np.array([1.0, 0.0, 0.0, 0.0]);\n",
@@ -90,8 +88,8 @@
     "seed = -1 # seed = -1 uses random device as seed\n",
     "bodytype = 'rigidbody' # three rotational degrees of freedom\n",
     "anglePatches = np.pi/2\n",
-    "reactivationRateK = 10\n",
-    "reactivationRateP = 10\n",
+    "reactivationRateK = 1.0\n",
+    "reactivationRateP = 1.0\n",
     "mapkIndex = [0]\n",
     "kinaseIndex = [1]\n",
     "phosIndex = [2]\n",
@@ -177,7 +175,7 @@
     "                    v1 = v0 + 0.4*sigma*quats.rotateVec(patchesCoordinates2[0], part.orientation)\n",
     "                else:\n",
     "                    v1 = 1 * v0\n",
-    "                datafile.write('type_0' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
+    "                datafile.write('type_3' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
     "                datafile.write('type_2' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
     "            if part.type == 2:\n",
     "                v0 = part.position\n",
@@ -185,7 +183,7 @@
     "                    v1 = v0 + 0.4*sigma*quats.rotateVec(patchesCoordinates2[0], part.orientation)\n",
     "                else:\n",
     "                    v1 = 1 * v0\n",
-    "                datafile.write('type_0' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
+    "                datafile.write('type_4' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
     "                datafile.write('type_1' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
     "    integrator.integrate(partlist)\n",
     "    if i%5000 == 0:\n",
